--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designing layout</title>
+    <title>Food</title>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" type="text/css">
@@ -38,9 +38,70 @@
             </nav>
         </header>
         <!-- Slider -->
-        <div class="slider">
-            
-        </div>
+        <section class="slider">
+            <div class="slider-content">
+                <h1>9 Delicious Dishes for Food Lovers</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati ducimus necessitatibus magnam
+                    alias officia ab quam laboriosam amet nesciunt!
+                </p>
+                <button>Explore recipes</button>
+            </div>
+        </section>
+
+        <!-- Recipe Blogs -->
+        <main>
+            <aside>
+                <div>
+                    <h3><span>Recipe</span>Blogs</h3>
+                    <img src="assets/slider.jpg" alt="blogs" id="blog-img">
+                    <p>January 10, 2023</p>
+                    <h4>Our Recipes Blog</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Quo, distinctio?</p>
+                </div>
+            </aside>
+            <section class="main-article">
+                <article>
+                    <div class="article-img"></div>
+                    <div>
+                        <p>Aug 10, 2022</p>
+                        <h4>Hot Meatloaf</h4>
+                        <p>Lorem ipsum dolor sit amet </p>
+                    </div>
+                </article>
+                <article>
+                    <div class="article-img"></div>
+                    <div>
+                        <p>Aug 10, 2022</p>
+                        <h4>Hot Meatloaf</h4>
+                        <p>Lorem ipsum dolor sit amet </p>
+                    </div>
+                </article>
+                <article>
+                    <div class="article-img"></div>
+                    <div>
+                        <p>Aug 10, 2022</p>
+                        <h4>Hot Meatloaf</h4>
+                        <p>Lorem ipsum dolor sit amet </p>
+                    </div>
+                </article>
+                <article>
+                    <div class="article-img"></div>
+                    <div>
+                        <p>Aug 10, 2022</p>
+                        <h4>Hot Meatloaf</h4>
+                        <p>Lorem ipsum dolor sit amet </p>
+                    </div>
+                </article>
+            </section>
+
+        </main>
+
+
+<footer>
+    Copyright 2023
+</footer>
+
     </div>
 
 </body>
