--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" type="text/css">
+    <!-- Fony=t Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 
 <body>
     <!-- Main Container -->
-    <div class="container">
+    <div class="home-container">
         <!-- header -->
         <header>
             <!-- navbar -->
             <nav>
                 <div class="logo">
-                    <img src="assets/logo1.png" alt="" id="logo">
+                    <a href="index.html"><img src="assets/logo1.png" alt="" id="logo"></a>
                 </div>
                 <div class="nav-item">
                     <select name="recipie" id="">
@@ -33,7 +37,7 @@
                     <a href="#">Shop</a>
                 </div>
                 <div class="subscribe">
-                    <button id="subscribe">Subscribe</button>
+                    <button id="subscribe" class="orange">Subscribe </button>
                 </div>
             </nav>
         </header>
@@ -44,7 +48,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati ducimus necessitatibus magnam
                     alias officia ab quam laboriosam amet nesciunt!
                 </p>
-                <button>Explore recipes</button>
+                <button class="orange">Explore recipes</button>
             </div>
         </section>
 
@@ -98,12 +102,61 @@
         </main>
 
 
-<footer>
-    Copyright 2023
-</footer>
+        <footer>
+            <div class="social">
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/index"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <div> Copyright &copy; 2023</div>
+        </footer>
+        <div class="row mod" id="modal">
+            <!-- <div class="col-2"></div> -->
+            <!-- <div class="col-8"> -->
+                <form action="">
+                    <div>
+                        <div class="title text-danger mt-5">
+                            <h1>Registration Form</h1>
+                        </div>
+                        <div class="details d-flex flex-column justify-content-center  ">
+                            <div class="mt-5">
+                                <label for="name" class="text-light">Name:</label><br>
+                                <input id="name" class="w-75 rounded border p-2" type="text" placeholder="Name"
+                                    required>
+                            </div>
+                            <div class="mt-3">
+                                <label for="email" class="text-light">Email:</label><br>
+                                <input id="email" class="w-75 rounded border p-2" type="email" placeholder="Email"
+                                    required>
+                            </div>
+                            <div class="mt-3">
+                                <label for="subject" class="text-light">Subject:</label><br>
+                                <input id="subject" class="w-75 rounded border p-2" type="text" placeholder="Subject"
+                                    required>
+                            </div>
+                            <div class="mt-3">
+                                <label for="projectdetails" class="text-light">Project Details:</label><br>
+                                <textarea class="w-75 rounded border p-2" name="" id="" cols="30"
+                                    placeholder="Project Details" required id="projectdetails"></textarea>
+                                <!-- <input type="text"> -->
+                            </div>
+                            <div class="mt-3">
+                                <button class="btn btn-primary" type="submit">Submit</button>
+                                <button class="btn btn-primary" type="reset">Reset</button>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </form>
+
+            <!-- </div>
+            <div class="col-2"></div> -->
+        </div>
 
     </div>
 
+    <script src="app.js"></script>
 </body>
 
 </html>
